[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfuse3-stubs"
version = "0.1.0"
authors = [
    { name = "Audrey Dutcher", email = "audrey@rhelmot.io" },
]

[tool.setuptools]
packages = ["pyfuse3-stubs", "pyfuse3_asyncio-stubs"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]
